[package]
name = "sprawl"
description = "Follow webpage links"
license = "MIT"
repository = "https://github.com/aatifsyed/sprawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
futures = "0.3.21"
petgraph = "0.6.2"
reqwest = "0.11.10"
tokio = { version = "1.18.2", features = ["sync"] }
tracing = "0.1.34"
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0.57"
httptest = "0.15.4"
soup = "0.5.1"
tokio = { version = "1.18.2", features = ["macros"] }

[workspace]
members = ["sprawl-bin"]
