[package]
name = "sprawl-bin"
description = "Follow webpage links"
license = "MIT"
repository = "https://github.com/aatifsyed/sprawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "rt"] }
sprawl = { path = "..", version = "0.1.0" }
clap = { version = "3.1.18", features = ["derive"] }
url = "2.2.2"
soup = "0.5.1"
tracing-subscriber = "0.3.11"
petgraph = "0.6.2"
regex = "1.5.6"
tracing = "0.1.34"
reqwest = "0.11.10"
